--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+
+{% include 'head.html' %}
+
 <body>
-    <h1>hello</h1>
+
+    {% include 'header.html' %}
+
+    {% block content %}
+    {% endblock %}
+
+
+    {% include 'footer.html' %}
 </body>
 </html>
