--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
-    <div style="text-align:center; margin: 2rem 0;">
+    <div class="makepi_header">
         <div>
-            <h1 style="font-family: 'Lobster', sans-serif;">makepi</h1>
+            <h1 class="makepi_logo">makepi</h1>
         </div>
         <div>
             <span>nav1</span>
