present a list of db

--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -14,15 +14,14 @@
             </div>
          </form>
 
-        {% if hello_world_output %}
-        <h1>
-            {{ hello_world_output.text }}
-        </h1>
-        {% endif %}
+        {% if hello_world_list %}
 
-        <h1>
-            {{ text }}
-        </h1>
+            {% for hello_world in hello_world_list %}
+                <h4>
+                    {{ hello_world.text }}
+                </h4>
+            {% endfor %}
+        {% endif %}
     </div>
 
 
