settings for logout and login

--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div>
+  <div style="text-align: center;">
     <form action="{% url 'accountapp:create' %}" method="post">
       {% csrf_token %}
       {{ form }}
