--- a/templates/head.html
+++ b/templates/head.html
@@ -13,4 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <!--    DEFAULT CSS LINK-->
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+    <style>
+        @font-face{
+        font-family: 'NanumSquareR';
+        src: local('NanumSquareR'),
+        url("{% static 'fonts/NanumSquareR.ttf' %} format("openype");
+        }
+    </style>
 </head>
