--- a/templates/header.html
+++ b/templates/header.html
@@ -11,6 +11,9 @@
                 <span>login</span>
             </a>
             {% else %}
+            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+                <sapn>Mypage</sapn>
+            </a>
             <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
                 <sapn>logout</sapn>
             </a>
