created Delete part at accountapp

--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -17,9 +17,13 @@
                 <p>
                     Change Info
                 </p>
-            {% endif %}
             </a>
-
+            <a href="{% url 'accountapp:delete' pk=user.pk %}">
+                <p>
+                    Quit
+                </p>
+            </a>
+            {% endif %}
         </div>
     </div>
 
