--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -24,6 +24,11 @@
 
 
 </style>
+  <div style="text-align: center;">
+    <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+      Create Article
+    </a>
+  </div>
 
   <div class="container">
     <div class="item1">
