--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -28,7 +28,7 @@
             {% endif %}
             <hr>
 
-
+            {% include 'commentapp/create.html' with article=target_article %}
         </div>
     </div>
 
