--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -6,7 +6,8 @@
         <div style="text-align: center; max-width: 500px; margin:4rem auto">
 
             {% if target_user.profile %}
-            <img src="{{ target_user.profile.image.url }}" style="height: 12rem; width 12rem; border-radius: 20rem; margin-bottom:2rem;">
+            <img src="{{ target_user.profile.image.url }}"
+                 style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom:2rem; object-fit: cover;">
             <h2 style="font-family: 'NanumSquareB'">
                 {{ target_user.profile.nickname }}
                     {% if target_user == user %}
@@ -47,6 +48,10 @@
                 </p>
             </a>
             {% endif %}
+        </div>
+
+        <div>
+            {% include 'snippets/list_fragment.html' with article_list=object_list  %}
         </div>
     </div>
 
