--- a/static/base.css
+++ b/static/base.css
@@ -20,3 +20,21 @@
         font-size: 13px;
     }
 }
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none; /* 밑줄 제거 */
+}
+
+.makepi_header_nav {
+    margin: 0.5rem;
+
+}
+
+.makepi_header_navbar{
+    margin: 1rem 0;
+}
