--- a/templates/head.html
+++ b/templates/head.html
@@ -18,7 +18,7 @@
         @font-face{
         font-family: 'NanumSquareR';
         src: local('NanumSquareR'),
-        url("{% static 'fonts/NanumSquareR.ttf' %} format("openype");
+        url("{% static 'fonts/NanumSquareR.ttf' %} format("opentype");
         }
     </style>
 </head>
