--- a/templates/snippets/card.html
+++ b/templates/snippets/card.html
@@ -1,3 +1,3 @@
-<div>
-    <img src="{{ article.image.url }}" alt="">
+<div style="display: block; text-align: center;">
+    <img src="{{ article.image.url }}" alt="" >
 </div>
