--- a/templates/snippets/pagination.html
+++ b/templates/snippets/pagination.html
@@ -1,21 +1,21 @@
 <div style="text-align: center; margin: 1rem 0;">
   {% if page_obj.has_previous %}
   <!-- 이전 페이지 버튼 -->
-  <a href="{% url 'articleapp:list' %}?page={{ page_obj.previous_page_number }}"
+  <a href="?page={{ page_obj.previous_page_number }}"
      class="btn btn-secondary rounded-pill">
     {{ page_obj.previous_page_number }}
   </a>
   {% endif %}
 
   <!-- 현재 페이지 버튼 -->
-  <a href="{% url 'articleapp:list' %}?page={{ page_obj.number }}"
+  <a href="?page={{ page_obj.number }}"
      class="btn btn-secondary rounded-pill active">
     {{ page_obj.number }}
   </a>
 
   {% if page_obj.has_next %}
   <!-- 다음 페이지 버튼 -->
-  <a href="{% url 'articleapp:list' %}?page={{ page_obj.next_page_number }}"
+  <a href="?page={{ page_obj.next_page_number }}"
      class="btn btn-secondary rounded-pill">
     {{ page_obj.next_page_number }}
   </a>
