--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div>
-        <div style="text-align: center; max-width: 500px; margin: 4rem auto">
+        <div style="text-align: center; max-width: 500px; margin: 4rem auto 1.5rem auto;">
 
 
             <img src="{{ target_project.image.url }}"
@@ -17,10 +17,25 @@
             </h5>
         </div>
 
+        <div class="text-center mb-5">
+            {% if user.is_authenicated %}
+                <!--            토글 처리-->
+                {% if not subscription %}
+                <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}"
+                    class="btn btn-primary rounded-pill px-3">
+                    Subscribe
+                </a>
+                {% else %}
+                <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}"
+                    class="btn btn-dark rounded-pill px-3">
+                    Unsubscribe
+                </a>
+                {% endif %}
+            {% endif %}
+        </div>
+
         <div>
             {% include 'snippets/list_fragment.html' with article_list=object_list %}
-
-
         </div>
     </div>
 {% endblock %}
