--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -11,7 +11,9 @@
             <h2 style="font-family: 'NanumSquareB'">
                 {{ target_user.profile.nickname }}
                     {% if target_user == user %}
-                    <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+                    <a class="material-symbols-outlined"
+                       style="box-shadow: 0 0 4px; #ccc; "
+                       href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
                         eidt
                     </a>
                     {% endif %}
