--- a/static/base.css
+++ b/static/base.css
@@ -38,3 +38,12 @@ a:hover {
 .makepi_header_navbar{
     margin: 1rem 0;
 }
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
